<resources>
    <string name="app_name">Basic-Android-Feature</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="home_screen">Home Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter name :</string>
    <string name="enter_age">Enter age :</string>
    <string name="enter_location">Enter location :</string>
    <string name="save_data">Save Data</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="get_data">Get Network Data</string>
    <string name="userName">Username :</string>
    <string name="enterUserName">Enter username</string>
    <string name="job">Job :</string>
    <string name="enterJob">Enter Job</string>
    <string name="age">Age :</string>
    <string name="enterAge">Enter age</string>
    <string name="place">Place :</string>
    <string name="enterPlace">Enter place</string>
    <string name="clear">Clear</string>
    <string name="login">Login</string>
    <string name="loginScreen">Login Screen</string>
    <string name="setting">Setting</string>
    <string name="unregister">UnRegister</string>
    <string name="register">Register</string>
    <string name="error_data_empty">Field should not be empty</string>
    <string name="userId">User ID:</string>
    <string name="createdAt">Created At</string>
    <string name="logout">Logout</string>
</resources>
