<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <TextView
        android:id="@+id/tvSample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_120"
        android:layout_marginLeft="@dimen/dimen_80"
        android:text="@string/userName"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSample" />

    <TextView
        android:id="@+id/tvUserNameValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Arun kumar"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvSample" />

    <TextView
        android:id="@+id/tvJob"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_120"
        android:layout_marginLeft="@dimen/dimen_80"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/job"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvJobValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="Mechanic"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvUserId"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_120"
        android:layout_marginLeft="@dimen/dimen_80"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/userId"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJob" />

    <TextView
        android:id="@+id/tvUserIdValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="9876"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvJobValue" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_120"
        android:layout_marginLeft="@dimen/dimen_80"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/createdAt"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserIdValue" />

    <TextView
        android:id="@+id/tvCreatedAtValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="Asborteorhiy"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserIdValue" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreatedAtValue" />

</androidx.constraintlayout.widget.ConstraintLayout>